<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/properties_australia_polygon" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView android:text="@string/fill_hue" />
            <SeekBar android:id="@+id/fillHueSeekBar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView android:text="@string/fill_alpha" />
            <SeekBar android:id="@+id/fillAlphaSeekBar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView android:text="@string/stroke_width" />
            <SeekBar android:id="@+id/strokeWidthSeekBar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView android:text="@string/stroke_hue" />
            <SeekBar android:id="@+id/strokeHueSeekBar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView android:text="@string/stroke_alpha" />
            <SeekBar android:id="@+id/strokeAlphaSeekBar" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/stroke_joint_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/strokeJointTypeSpinner"
            android:spinnerMode="dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/stroke_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/strokePatternSpinner"
            android:spinnerMode="dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/toggleClickability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="toggleClickability"
        android:text="@string/clickable" />

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>